Fix issue where label text was not aligning properly.

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -37,6 +37,7 @@
 
   .label-container {
     display: inline-block;
+    height: 100%;
     vertical-align: middle;
   }
 
